# Market-Anaylsis

./: .gitignore  Cargo.toml  app.py  daft_listings.json  pyproject.toml  text.json
backend/: .gitignore  Cargo.toml  app.py  cli.py  pyproject.toml
backend/src/: main.rs
backend/src/bot/: alert.py  app.py  storage.py
backend/src/urls/: daft.py
backend/src/utils/: data_lake.py  filter.py  parse.py
frontend/: package-lock.json  package.json
src/: __init__.py  main.rs
src/query/: query.py
src/urls/: __init__.py  daft.py
src/utils/: api.py  data_lake.py  parse.py  processor.py
