[tool.poetry]
name = "main"
version = "0.1.0"
description = ""
authors = ["DemiAina <100835583+DigitalDemi@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"
selectolax = "^0.3.26"
brotli = "^1.1.0"
chompjs = "^1.3.0"
pandas = "^2.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
