[package]
name = "main"
version = "0.1.0"
edition = "2021"

[dependencies]
arrow = "53.3.0"
axum = "0.7.9"
chrono = "0.4.39"
log = "0.4.22"
parquet = "53.3.0"
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.133"
tokio = { version = "1.42.0", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
uuid = "1.11.0"


[dev-dependencies]
reqwest = "0.11"
tokio = { version = "1", features = ["macros"] }
