[tool.poetry]
name = "main"
version = "0.1.0"
description = ""
authors = ["DemiAina <100835583+DigitalDemi@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"
selectolax = "^0.3.26"
brotli = "^1.1.0"
chompjs = "^1.3.0"
pandas = "^2.2.3"
pyarrow = "^18.1.0"
delta-spark = "^3.2.1"
aiohttp = "^3.9.5"
aiofiles = "^24.1.0"
aiogram = "^3.15.0"
load-dotenv = "^0.1.0"


[tool.poetry.group.dev.dependencies]
neovim = "^0.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
